# chmura_salami

./: README.md  pyproject.toml
chmura/: salami.py
